# UCTS

./: .gitignore  CMakeLists.txt  README.md
CoverageReport/: coverage.info  coverage_filtered.info
CoverageReport/report/: cmd_line  index-sort-f.html  index-sort-l.html  index.html
CoverageReport/report/src/UniversalConverterToString/: index-sort-f.html  index-sort-l.html  index.html  universal_converter_to_string.cpp.func-c.html  universal_converter_to_string.cpp.func.html  universal_converter_to_string.cpp.gcov.html  universal_converter_to_string.h.func-c.html  universal_converter_to_string.h.func.html  universal_converter_to_string.h.gcov.html
CoverageReport/report/tests/UniversalConverterToStringTests/: index-sort-f.html  index-sort-l.html  index.html  universal_converter_to_string_tests.cpp.func-c.html  universal_converter_to_string_tests.cpp.func.html  universal_converter_to_string_tests.cpp.gcov.html
CoverageReport/report/tests/UniversalConverterToStringTraitsTests/: has_ostream_operator_tests.cpp.func-c.html  has_ostream_operator_tests.cpp.func.html  has_ostream_operator_tests.cpp.gcov.html  has_to_string_conversion_operator_tests.cpp.func-c.html  has_to_string_conversion_operator_tests.cpp.func.html  has_to_string_conversion_operator_tests.cpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html  is_constructible_tests.cpp.func-c.html  is_constructible_tests.cpp.func.html  is_constructible_tests.cpp.gcov.html  is_convertible_to_base_tests.cpp.func-c.html  is_convertible_to_base_tests.cpp.func.html  is_convertible_to_base_tests.cpp.gcov.html  is_convertible_to_string_tests.cpp.func-c.html  is_convertible_to_string_tests.cpp.func.html  is_convertible_to_string_tests.cpp.gcov.html  is_to_string_compatible_tests.cpp.func-c.html  is_to_string_compatible_tests.cpp.func.html  is_to_string_compatible_tests.cpp.gcov.html
src/: CMakeLists.txt
src/DemoProgram/: CMakeLists.txt  demo_program.cpp
src/InstantTests/: CMakeLists.txt  instant_tests.cpp
src/StringConversionTraits/: CMakeLists.txt  string_conversion_traits.h
src/TypeRequirementsAnalyzer/: CMakeLists.txt  type_requirements_analyzer.cpp
src/UniversalConverterToString/: CMakeLists.txt  is_convertible_to_string.h  universal_converter_to_string.cpp  universal_converter_to_string.h  universal_converter_to_string_traits.h
tests/: CMakeLists.txt
tests/StringConversionTraitsTests/: CMakeLists.txt  has_ostream_operator_tests.cpp  has_to_string_conversion_operator_tests.cpp  is_constructible_tests.cpp  is_convertible_to_base_tests.cpp  is_to_string_compatible_tests.cpp
tests/UniversalConverterToStringTests/: CMakeLists.txt  common_example_classes.h  is_convertible_to_string_tests.cpp  universal_converter_to_string.cpp  universal_converter_to_string_tests.cpp
tests/UniversalConverterToStringTraitsTests/: CMakeLists.txt  has_ostream_operator_tests.cpp  has_to_string_conversion_operator_tests.cpp  is_constructible_tests.cpp  is_convertible_to_base_tests.cpp  is_convertible_to_string_tests.cpp  is_to_string_compatible_tests.cpp
